@@ -1,3 +1,6 @@
+Upcoming:
+- Inserting/extracting from the crafter (using hopper or whatever) should now be correct
+
 1.2.10:
 - The advanced porter gui works again
 - The teleportprobe gui works again
